Improve styling * update truncation length * fix alignment * adding some padding

--- a/webview/src/plots/components/ribbon/styles.module.scss
+++ b/webview/src/plots/components/ribbon/styles.module.scss
@@ -8,12 +8,12 @@
 }
 
 .columnsTable {
-  td:first-child {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    direction: rtl;
-    max-width: 180px;
-    text-align: left;
+  td {
+    padding: 2px;
+
+    &:first-child {
+      text-align: left;
+    }
   }
 }
 
